WebCore::SameSizeAsNode must use WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR <https://bugs.webkit.org/show_bug.cgi?id=278282> <rdar://134157361>

Reviewed by Alex Christensen.

* Source/WebCore/dom/Node.cpp:
(WebCore::SameSizeAsNode):
- Add WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR and WTF_MAKE_FAST_ALLOCATED to
  struct definition to fix compiler errors with upstream clang.

Canonical link: https://commits.webkit.org/282518@main